--- a/src/app/components/films/film-detail/film-detail.component.html
+++ b/src/app/components/films/film-detail/film-detail.component.html
@@ -1,4 +1,14 @@
-
 <div class="container">
-  <app-film-item [film]="film" [more]="more"></app-film-item>
-</div>
+
+    <div class="card m-2" style="width: 18rem; ">
+        <img src="https://pi.tedcdn.com/r/talkstar-assets.s3.amazonaws.com/production/playlists/playlist_66/the_power_of_film.jpg?quality=89&w=1200" class="card-img-top" alt="{{film.alt}}">
+        <div class="card-body">
+          <h5 class="card-title">{{film.id}}</h5>
+          <p class="card-text">{{film.title}}</p>
+          <a class="btn btn-warning" routerLink="/list">Favourites</a>
+          <a class="btn btn-warning" routerLink="/list">Go back</a>
+          <span class="fa fa-star checked"></span>
+        </div>
+      </div>
+
+<div>
