--- a/src/app/components/films/film-item/film-item.component.html
+++ b/src/app/components/films/film-item/film-item.component.html
@@ -1,10 +1,9 @@
-<div class="card" style="width: 18rem;">
+<div class="card m-2" style="width: 18rem;">
     <img src="https://pi.tedcdn.com/r/talkstar-assets.s3.amazonaws.com/production/playlists/playlist_66/the_power_of_film.jpg?quality=89&w=1200" class="card-img-top" alt="{{film.alt}}">
     <div class="card-body">
       <h5 class="card-title">{{film.id}}</h5>
       <p class="card-text">{{film.title}}</p>
-      <a *ngIf="more === 'info'" class="btn btn-primary" routerLink="/detail/{{film.id}}">More info</a>
-      <a *ngIf="more === 'back'" class="btn btn-warning" routerLink="/list">Go back</a>
+      <a  class="btn btn-primary" [routerLink]="['/detail', film]">More info</a>
       <span class="fa fa-star checked"></span>
     </div>
 </div>
