--- a/src/app/components/films/film-detail/film-detail.component.html
+++ b/src/app/components/films/film-detail/film-detail.component.html
@@ -1,13 +1,12 @@
 <div class="container">
 
     <div class="card m-2" style="width: 18rem; ">
-        <img src="https://pi.tedcdn.com/r/talkstar-assets.s3.amazonaws.com/production/playlists/playlist_66/the_power_of_film.jpg?quality=89&w=1200" class="card-img-top" alt="{{film.alt}}">
+        <img src="{{film.poster}}" class="card-img-top" alt="{{film.alt}}">
         <div class="card-body">
-          <h5 class="card-title">{{film.id}}</h5>
-          <p class="card-text">{{film.title}}</p>
-          <a class="btn btn-warning" (click)="addToFavourites(film)">Favourites</a>
-          <a class="btn btn-warning" routerLink="/list">Go back</a>
-          <span class="fa fa-star checked"></span>
+          <h5 class="card-title">{{film.title}}</h5>
+          <p class="card-text">{{film.year}}</p>
+          <button class="btn btn-warning" (click)="addToFavourites(film)" [disabled] = "disabled">{{action}}</button>
+          <button class="btn bbtn-secondary mt-2" routerLink="/list">Go back to list</button>
         </div>
       </div>
 
